# Matrix

./: .gitignore  CMakeLists.txt  ReadMe.md
include/: BasicAlgebra.h  BasicOperate.h  Conv.h  CrossProduct.h  Decompose.h  Determinant.h  Eig.h  Function.h  Init.h  Inner.h  Inv.h  LinearAlgebra.h  Mat.h  Operate.h  SolveEquations.h  Submatrix.h  Sum.h  Transform.h
test/: BasicAlgebraTest.cpp  EigTest.cpp  Test.h  main.cpp
